# cavax

./: .gitignore  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac
include/cavax/: cavax.h  cavax_general.h  ids.h  log.h  rawbuf.h
include/cavax/network/: beacon-funcs.h  beacons.h  connect.h  connection.h  fields.h  fla.h  host.h  ip.h  msg.h  network.h  opcodes.h  peer.h  serialize.h  ssl.h  vla.h
include/cavax/utils/: wrappers.h
src/: cavax.c  ids.c  rawbuf.c
src/network/: beacons.c  connect.c  fields.c  msg.c  network.c  opcodes.c  peer.c
src/sys/: log.c
src/utils/: wrappers.c
tests/include/: msg_t.h
